Add documentation for user and product repos
